# stunner-viewer

./: Cargo.toml  README.md  build.rs
assets/: app.rc
src/: app.rs  error.rs  exporter.rs  lib.rs  main.rs
src/model/: experiment.rs  instrument.rs  measurement.rs  mod.rs  spectrum.rs
src/parser/: metadata.rs  mod.rs  spectrum.rs  tlv.rs
tests/: parse_bin.rs
ui/: main.slint  spectrum-chart.slint
